@@ -28,7 +28,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
@@ -103,8 +102,8 @@ public class CloseIndexResponseTests extends AbstractWireSerializingTestCase<Clo
                             // Serialising and deserialising an exception seems to remove the "java.base/" part from the stack trace
                             // in the `reason` property, so we don't compare it directly. Instead, check that the first lines match,
                             // and that the stack trace has the same number of lines.
-                            List<String> expectedReasonLines = expectedFailure.reason().lines().collect(Collectors.toList());
-                            List<String> actualReasonLines = actualFailure.reason().lines().collect(Collectors.toList());
+                            List<String> expectedReasonLines = expectedFailure.reason().lines().toList();
+                            List<String> actualReasonLines = actualFailure.reason().lines().toList();
                             assertThat(actualReasonLines.get(0), equalTo(expectedReasonLines.get(0)));
                             assertThat(
                                 "Exceptions have a different number of lines",
